# Bluetrackr

./: README.md  notes.md
doc/: notes_04_06_2020.md
firmware/: .gitignore  CMakeLists.txt
firmware/Bluetrackr-common/: CMakeLists.txt
firmware/Bluetrackr-common/nrf24_custom/: nrf24_impl.hpp
firmware/Bluetrackr-receiver/: Bluetrackr-receiver.ioc  CMakeLists.txt
firmware/Bluetrackr-receiver/Core/Inc/: main.h  main_loop.h  nrf24_hal.h
firmware/Bluetrackr-receiver/Core/Src/: main.c  main_loop.cpp  stm32f0xx_hal_msp.c
firmware/Bluetrackr-receiver/Inc/: CMakeLists.txt  error_handler.hh
firmware/Bluetrackr-receiver/Src/: CMakeLists.txt  main_loop.cpp
firmware/Bluetrackr-transmitter/: Bluetrackr-transmitter.ioc  CMakeLists.txt
firmware/Bluetrackr-transmitter/Core/Inc/: main.h  main_loop.h  mpu.h  nrf24_hal.h
firmware/Bluetrackr-transmitter/Core/Libs/: delay.cpp  delay.h  mpu9250.cpp  mpu9250.h
firmware/Bluetrackr-transmitter/Core/Libs/blt/: delay.hpp  error_handler.hpp  gpio.hpp  utils.hpp
firmware/Bluetrackr-transmitter/Core/Libs/nrf24/: nrf24.hpp  nrf24_impl.hpp
firmware/Bluetrackr-transmitter/Core/Libs/spi/: spi.cpp  spi.hpp
firmware/Bluetrackr-transmitter/Core/Src/: main.c  main_loop.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c
firmware/Bluetrackr-transmitter/Inc/: CMakeLists.txt  main.h  mpu.h
firmware/Bluetrackr-transmitter/Inc/USB/: CMakeLists.txt
firmware/Bluetrackr-transmitter/Src/: CMakeLists.txt  main.c  main_loop.cpp  nrf24_hal.c  stm32f1xx_hal_msp.c  stm32f3xx_hal_msp.c
firmware/Bluetrackr-transmitter/Src/USB/: CMakeLists.txt
firmware/common/: error_handler.hh  mpu9250.cpp
firmware/common/blt/: bit.hh  hal_include.hh  time.hh
firmware/common/common/: mpu9250.h
firmware/common/nrf24/: nrf24.hh  nrf24_impl.hpp
firmware/common/nrf24_custom/: nrf24.hh
firmware/receiver/: Bluetrackr-receiver.ioc  platformio.ini  receiver.ioc
firmware/receiver/Inc/: CMakeLists.txt  error_handler.hh  main.h  main_loop.hh  stm32f0xx_hal_conf.h  stm32f0xx_it.h
firmware/receiver/Src/: CMakeLists.txt  main.c  main_loop.cpp  stm32f0xx_hal_msp.c  stm32f0xx_it.c
firmware/receiver/inc/: usb_device.h  usbd_conf.h  usbd_hid.h
firmware/receiver/src/: usb_device.c  usbd_desc.c  usbd_hid.c
firmware/transmitter/: Bluetrackr-transmitter.ioc  extra_script.py  platformio.ini  transmitter.ioc
firmware/transmitter/inc/: error_handler.hh  main.h  main_loop.hh  usbd_cdc_if.h
firmware/transmitter/src/: main.c  main_loop.cpp  mpu.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  stm32f3xx_hal_msp.c  system_stm32f0xx.c  usbd_conf.c  usbd_desc.c  usbd_dfu.c
hardware/: .gitignore
hardware/receiver/: Bluetrackr-receiver-cache.lib  Bluetrackr-receiver.kicad_pcb  Bluetrackr-receiver.kicad_sch  Bluetrackr-receiver.pro  Bluetrackr-receiver.sch  Bluetrackr-receiver.sch-bak
hardware/transmitter/: Bluetrackr-transmitter-cache.lib  Bluetrackr-transmitter.kicad_pcb  Bluetrackr-transmitter.kicad_prl  Bluetrackr-transmitter.kicad_pro  Bluetrackr-transmitter.kicad_sch  Bluetrackr-transmitter.kicad_sch-bak  Bluetrackr-transmitter.pro  Bluetrackr-transmitter.sch  Bluetrackr-transmitter.sch-bak  Charging.sch-bak  fp-info-cache  notes.md
hardware/transmitter/case/: Bluetrackr-transmitter-assembly.prt  Bluetrackr-transmitter-case-bottom.prt  (+1 more)
(+34 files in other folders)
